Travis: Use Go 1.5.
Remove -composites=false since it appears unneeded.

Simplify references to current directory.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - 1.4
+  - 1.5
 before_install:
   - sudo apt-get update
   - sudo apt-get install -qq libgl1-mesa-dev xorg-dev
@@ -8,6 +8,6 @@ install:
   - go get golang.org/x/tools/cmd/vet
 script:
   - go get -t -v ./...
-  - diff -u <(echo -n) <(gofmt -d ./)
-  - go tool vet -composites=false ./
+  - diff -u <(echo -n) <(gofmt -d .)
+  - go tool vet .
   - go test -v -race ./...
