--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: Install dependencies (linux)
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: sudo apt-get install libgl1-mesa-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y mesa-utils mesa-common-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libgl1-mesa-dev libglfw3-dev
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
